--- a/jenkins/helloworld1/git-deploy/Jenkinsfile
+++ b/jenkins/helloworld1/git-deploy/Jenkinsfile
@@ -17,7 +17,7 @@ node('agent') {
 
         // Run Prepare stage
         stage('Prepare') {
-            sh "ls -la jenkins/helloworld1"
+            sh "ls -la jenkins"
             println('Load Project vars...')
             load(env.VAR_PATH)
 
