--- a/jenkins/helloworld1/git-deploy/Jenkinsfile
+++ b/jenkins/helloworld1/git-deploy/Jenkinsfile
@@ -24,7 +24,7 @@ node('agent') {
             load(env.VAR_PATH)
 
             println('Load Stages..')
-            buildStage = load(env.Build)
+          //  buildStage = load(env.Build)
             gitStage = load(env.Git)
             dockerStage = load(env.Docker)
             helmStage = load(env.Helm)
