--- a/jenkins/helloworld1/git-deploy/Jenkinsfile
+++ b/jenkins/helloworld1/git-deploy/Jenkinsfile
@@ -29,8 +29,8 @@ node('agent') {
             load(env.VAR_PATH)
 
             println('Load Stages..')
-          //  buildStage = load(env.Build)
-          //  gitStage = load(env.Git)
+            buildStage = load(env.Build)
+            gitStage = load(env.Git)
             dockerStage = load(env.Docker)
             helmStage = load(env.Helm)
             testsStage = load(env.Tests)
