--- a/jenkins/helloworld1/git-deploy/Jenkinsfile
+++ b/jenkins/helloworld1/git-deploy/Jenkinsfile
@@ -32,9 +32,9 @@ node('agent') {
             buildStage = load(env.Build)
             gitStage = load(env.Git)
             //dockerStage = load(env.Docker)
-            helmStage = load(env.Helm)
-            testsStage = load(env.Tests)
-            deployStage = load(env.Deploy)
+           // helmStage = load(env.Helm)
+            //testsStage = load(env.Tests)
+           // deployStage = load(env.Deploy)
 
         }
 
