--- a/jenkins/helloworld1/git-deploy/Jenkinsfile
+++ b/jenkins/helloworld1/git-deploy/Jenkinsfile
@@ -30,7 +30,7 @@ node('agent') {
 
             println('Load Stages..')
            // buildStage = load(env.Build)
-            //gitStage = load(env.Git)
+            gitStage = load(env.Git)
             //dockerStage = load(env.Docker)
            // helmStage = load(env.Helm)
             //testsStage = load(env.Tests)
