--- a/jenkins/helloworld1/git-deploy/Jenkinsfile
+++ b/jenkins/helloworld1/git-deploy/Jenkinsfile
@@ -57,7 +57,7 @@ node('agent') {
 //
 //
           // Run Unittests Stage
-          testsStage.Unittests(project: "env.PROJECT")
+          testsStage.UnitTests(project: "env.PROJECT")
 //        
 //
 //        // Run Deploy Stage
